[metadata]
name = journal2ebook
author = Ashley DaSilva, Constantin Gahr, Jason Gullifer
license = GNU
description = GUI for k2pdfopt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src


[flake8]
max-line-length = 88
extend-ignore = "E203, W503, E402"
per-file-ignores =
    __init__.py: F401,F403

[pylint.]
max-line-length = 88
disable =
    format,
    import-error,
    multiple-statements,
    no-else-return,
    too-many-arguments,
    too-many-locals,
    unneeded-not,

# allow one-letter variables, allow variables starting with one capital letter (i.e.
# matrices)
good-names-rgxs = ([A-Za-z]{1}|[A-Z]{1}.*)$
good-names = df, ax, y1, y2
ignore-patterns= .*\.md$

[pycodestyle]
max-line-length = 88
ignore = "E203, W503, E402"
